# TVMFFI.jl

./: .gitignore  AGENTS.md  Project.toml  README.md
.github/workflows/: CI.yml
benchmarks/: Project.toml  README.md  bench_cuda_breakdown.jl  bench_example.jl  cuda_breakdown.jl  example_cuda.jl  ffi_overhead.jl  microbenchmarks.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
docs/: Project.toml  make.jl
docs/src/: api.md  index.md
examples/: basic_usage.jl  fixtures_utils.jl  list_types.jl  load_add_one.jl  load_add_one_cuda.jl  load_add_one_metal.jl  test_callback.jl  test_callback_error.jl  test_existing_types.jl  test_function_advanced.jl  test_function_registration.jl  test_gc_safety.jl  test_gpu_device_detection.jl  test_object_registration.jl  test_simple_lookup.jl  test_tvm_version.jl  test_version.jl  use_case_custom_operator.jl
ext/: AMDGPUExt.jl  CUDAExt.jl  MetalExt.jl
fixtures/: CMakeLists.txt  README.md  add_one_cpu.cc  add_one_cuda.cu  add_one_metal.metal  add_one_metal.mm
src/: LibTVMFFI.jl  TVMFFI.jl  any.jl  conversion.jl  device.jl  dlpack.jl  dtype.jl  error.jl  function.jl  gpuarrays_support.jl  module.jl  object.jl  string.jl  tensor.jl  utils.jl
test/: Project.toml  fixtures.jl  fixtures.jl.432962.cov  runtests.jl  test_conversions.jl  test_dlpack.jl  test_dlpack.jl.437077.cov  test_dlpack.jl.439008.cov  test_dlpack.jl.440105.cov  test_dtype_device.jl  test_error.jl  test_fixtures.jl  test_fixtures.jl.440105.cov  test_functions.jl  test_functions.jl.432962.cov  test_functions.jl.439008.cov  test_gc_safety.jl  test_gc_safety.jl.437077.cov  test_modules.jl  test_objects.jl  test_string_bytes.jl  test_tensors.jl  test_tensors.jl.440105.cov
